<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="20dp"
    android:scrollbars="vertical"
    android:id="@+id/post_card"
    app:cardCornerRadius="5dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#323232">

        <TextView
            android:id="@+id/post_card_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="136dp"
            android:text="@string/place_holder_title"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/post_card_picture"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/post_card_payment"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/_12_34"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_card_title"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/post_card_picture"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:contentDescription="@string/add_picture_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.017"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/addimage" />

        <Button
            android:id="@+id/post_card_edit_button"
            android:layout_width="67dp"
            android:layout_height="38dp"
            android:layout_marginEnd="16dp"
            android:text="Edit"
            app:layout_constraintBottom_toBottomOf="@+id/post_card_payment"
            app:layout_constraintEnd_toStartOf="@+id/post_card_payment"
            app:layout_constraintTop_toTopOf="@+id/post_card_payment"
            app:layout_constraintVertical_bias="0.413" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>